tests/compilefail84.pas
program compilefail84(output);
{In Pascal, only boolean expressions can follow an if.}
begin
	if 4 then writeln('yes');
end.	
